<resources>
    <string name="app_name">Popular Movies</string>
    <string name="poster_of_the_movie">Poster of the movie.</string>
    <string name="plot_synopsis_label">Plot Synopsis</string>
    <string name="release_date_label">Release Date</string>
    <string name="user_rating_label">User Rating</string>
    <string name="sort_by_menu_top_rated">Top Rated</string>
    <string name="sort_by_menu_popular">Popular</string>
    <string name="sort_by_menu_favorite">Favorites</string>
    <string name="sort_movies_option_menu">Sort movies option menu</string>


    <string name="sort_popular_label">Popular</string>
    <string name="sort_top_rated_label">Top Rated</string>

    <string name="main_activity_bundle_key">main_activity_bundle_key</string>
    <string name="details_activity_bundle_key">details_activity_bundle_key</string>


    <string name="sort_popular">popular</string>
    <string name="sort_top_rated">top_rated</string>
    <string name="sort_by_key">pref_sort_by_key</string>
    <string name="sort_by_label">Sort By</string>
    <string name="settings_activity_label">Settings</string>
    <string name="retry">Retry</string>
    <string name="top_rated_activity_label">Top Rated</string>
    <string name="no_network">Your device is not connected to the internet.</string>
    <string name="user_reviews_label">User Reviews</string>
    <string name="author">%1$s:</string>
    <string name="details_activity_share">Watch %1$s Trailer: %2$s \n %3$s \n #PopularMoviesApp</string>
    <string name="videos_label">Videos</string>

    <string name="content_authority">io.github.yahia_hassan.popularmoviesstage2</string>


    <string name="extra_main_activity_async_task_loader">extra_main_activity_async_task_loader</string>
    <string name="extra_main_activity_cursor_loader">extra_main_activity_cursor_loader</string>
    <string name="activity_code">activity_code</string>

</resources>
