<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.github.yahia_hassan.popularmoviesstage2.FavoritesDetailsActivity" >
    <data>
        <variable name="favoritesMovie" type="io.github.yahia_hassan.popularmoviesstage2.POJOs.Movie"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fda_movie_poster_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/poster_of_the_movie"
                android:minHeight="@dimen/minHeight_280"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/fda_original_title_tv"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@{favoritesMovie.movieTitle}"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintBottom_toTopOf="@+id/fda_user_rating_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fda_movie_poster_iv" />

            <TextView
                android:id="@+id/fda_plot_synopsis_tv"
                android:layout_width="@dimen/margin_0"
                android:layout_height="@dimen/margin_0"
                android:layout_marginBottom="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@{favoritesMovie.plotSynopsis}"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fda_plot_synopsis_label"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/fda_user_rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:text="@{favoritesMovie.userRating}"
                app:layout_constraintBaseline_toBaselineOf="@+id/fda_release_date_tv"
                app:layout_constraintStart_toStartOf="@+id/fda_user_rating_label" />

            <android.support.constraint.Guideline
                android:id="@+id/fda_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/fda_release_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@{favoritesMovie.releaseDate}"
                app:layout_constraintStart_toStartOf="@+id/fda_release_date_label"
                app:layout_constraintTop_toBottomOf="@+id/fda_release_date_label" />

            <TextView
                android:id="@+id/fda_plot_synopsis_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/plot_synopsis_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Tooltip"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fda_release_date_tv" />

            <TextView
                android:id="@+id/fda_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/release_date_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Tooltip"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/fda_guideline"
                app:layout_constraintTop_toBottomOf="@+id/fda_original_title_tv"/>


            <TextView
                android:id="@+id/fda_user_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/user_rating_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Tooltip"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/fda_release_date_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/fda_no_connection_tv"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_24"
                android:layout_marginStart="@dimen/margin_24"
                android:text="@string/no_network"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

            <Button
                android:id="@+id/fda_retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/retry"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/no_network_tv" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fda_favorite_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@+id/fda_original_title_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_favorite_border"
                android:background="@color/colorAccent"/>


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>
