<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="io.github.yahia_hassan.popularmovies.DetailsActivity">

        <ImageView
            android:id="@+id/movie_poster_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poster_of_the_movie"
            android:minHeight="280dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/original_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster_iv"
            tools:text="TextView" />

        <TextView
            android:id="@+id/plot_synopsis_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plot_synopsis_label"
            app:layout_constraintVertical_bias="0.0"
            tools:text="TextView" />

        <TextView
            android:id="@+id/user_rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/release_date_tv"
            app:layout_constraintTop_toBottomOf="@+id/user_rating_label"
            app:layout_constraintVertical_bias="0.0"
            tools:text="TextView" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/release_date_label"
            tools:text="TextView" />

        <TextView
            android:id="@+id/plot_synopsis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/plot_synopsis_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Tooltip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/original_title_tv" />

        <TextView
            android:id="@+id/release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/release_date_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Tooltip"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/plot_synopsis_label" />

        <TextView
            android:id="@+id/user_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/user_rating_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Tooltip"
            app:layout_constraintStart_toStartOf="@+id/release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/release_date_tv" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>
